# devman-django

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.gitbook/data/: example.json
core/: views.py
places/: admin.py  apps.py  models.py  services.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_auto_20210512_1843.py  0003_auto_20210517_2023.py  0004_place_tiny.py  0005_auto_20210517_2116.py  0006_photo_upload_dir.py  0007_auto_20210528_2010.py  0008_alter_place_slug.py  0009_auto_20210603_2050.py  0010_alter_place_slug.py  0011_auto_20210626_0910.py  0012_alter_place_slug.py  0013_rename_slug_place__upload_dir.py  0013_rename_slug_place_private_field_to_store_upload_dir_name.py  0014_alter_place_unique_together.py
places/tests/: test_load_place.py
static/places/: roofs24.json
templates/core/: index.html
templates/places/: index.html
where_to_go/: settings.py  urls.py  wsgi.py
where_to_go/settings/: common.py  development.py  production.py
