[tool.poetry]
name = "devman-django"
version = "0.1.0"
description = ""
authors = ["Aleksandr Karakchiev <realrushen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.2.3"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
